--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   "devDependencies": {
     "ava": "0.16.0",
     "babel-eslint": "6.1.2",
+    "esformatter-limit-linebreaks": "0.0.3",
     "eslint": "3.5.0",
     "eslint-config-oniyi": "4.2.0",
     "eslint-plugin-ava": "3.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "jsfmt": "0.5.3",
     "nyc": "8.1.0"
   },
   "dependencies": {
