--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
         "comma-dangle": [1, "always-multiline"],
         "no-console": 1,
         "indent": "off",
+        "prefer-const": "off",
         "object-curly-spacing": "off",
         "one-var": "off",
         "one-var-declaration-per-line": "off",
