--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "eslint-plugin-ava": "3.0.0",
     "eslint-plugin-import": "2.2.0",
     "jsfmt": "0.5.3",
-    "nyc": "8.1.0"
+    "nyc": "8.1.0",
+    "sinon": "1.17.7"
   },
   "dependencies": {
     "oniyi-logger": "1.0.0"
   },
   "nyc": {
     "exclude": [
-      "node_modules/**"
+      "node_modules/**",
+      "test/**"
     ]
   }
 }
